2007-07-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c: 
	* src/yelp-toc.c:
	Fix info page titles in TOC
	Fix file:// uri's when with too many /'s
	
	* src/Makefile.am:
	* src/yelp-info-parser.c:
	* src/yelp-info.c:
	* src/yelp-info.h:
	* src/yelp-window.c:
	Convert info pages across to new pager system
	Hook up info pages into yelp, new style
	Fix various things in the parser to cope with
	having less available info for resolving frags
	
	* src/yelp-toc.c: 
	Fix the most annoying error message in the world EVER
	Unexpected async xlib errors generally mean threading issues
	except, apparently, when you're trying to parse using libxml
	in which case, they could mean anything.  In this case, it
	meant the params passed in was not NULL terminating.
	Why this resulted in an unexpected xlib async reply is
	left as an exercise to the reader.  I spent 7 days trying to 
	figure it out.
	
2007-07-01  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-toc.c: 
	Now Rarian is fast, don't split out man and info pages.
	Add in params so the TOC looks nice and shiny
	Fix a couple of silly warnings
	
	* src/yelp-base.c:
	Move initialisation of bookmarks and settings to before TOC

2007-06-20  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in: 
	* src/test-resolver.c:
	* src/yelp-toc.c:
	* src/yelp-window.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	Spoon is now Rarian.  Bump min version to 0.5.0

2007-06-14  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c:
	Minor fix to recognise man:<filepath>
	
	* src/Makefile.am:
	* src/yelp-window.c: 
	Add support for docbook (yay!) and
	man pages
	Rename silly function names to something slightly
	more sensible
	Update my email address in help dialog (minor)
	
	* src/test-document.c:
	* src/yelp-document.c:
	* src/yelp-document.h:
	* src/yelp-docbook.c:
	Add support for getting the sections GtkTreeModel
	out
	
	* src/yelp-page.c:
	* src/yelp-page.h:
	Add functions to get the length (remaining)
	of page
	
	