@@ -119,6 +119,7 @@ typedef enum {
     YELP_RRN_TYPE_MAN,
     YELP_RRN_TYPE_INFO,
     YELP_RRN_TYPE_HTML,
+    YELP_RRN_TYPE_XHTML,
     YELP_RRN_TYPE_TOC,
     YELP_RRN_TYPE_SEARCH,
     YELP_RRN_TYPE_NOT_FOUND,
